<resources>
    <string name="app_name">FSkating</string>
    <string name="ic_home">Главная</string>
    <string name="ic_book">Теория</string>
    <string name="ic_video">Видео</string>
    <string name="ic_skate">Фигуристы</string>
    <string name="error">Раздел разрабатывается</string>
    <string name="choose">Выберите раздел:</string>
    <string name="profile1">Александра Степанова</string>
    <string name="profile2">Иван Букин</string>
    <string name="coaches"><u>Тренерский штаб:</u></string>
    <string name="coaches_sb">Ирина Жук, Александр Свинин</string>
    <string name="seasons"><u>Программы сезона 2021-2022:</u></string>
    <string name="rd">Ритм-танец: Apache, Everybody</string>
    <string name="fd">Прозивольный танец: Ромео и Джульетта</string>
    <string name="winners"><u>Достижения:</u></string>
    <string name="ch_europe">Чемпионат Европы:</string>
    <string name="ch_rus">Чемпионат России:</string>
    <string name="video1">Чемпионат Европы 2022. Женщины - ПП</string>
    <string name="video2">Чемпионат Мира 2021. Юзуру Ханю - КП</string>
    <string name="video3">Олимпийские игры 2022. Марк Кондартюк - КП</string>
    <string name="bookSingle">Одиночное фигурное катание</string>
    <string name="pairs">Парное катание</string>
    <string name="single">Одиночное катание</string>
    <string name="dance">Танцы на льду</string>
    <string name="score">Оценки</string>
    <string name="rec">Рекомендации</string>
    <string name="jumps">Прыжки</string>
    <string name="spins">Вращения</string>
    <string name="choreo">Хореография</string>
    <string name="types">Виды программ</string>
    <string name="search">Поиск...</string>
    <string name="kisiki">Александра Бойкова, Дмитрий Козловский</string>
    <string name="kami">Камила Валиева</string>
    <string name="sasha">Александра Трусова</string>
    <string name="mark">Марк Кондратюк</string>
    <string name="stepbuk">Александра Степанова, Иван Букин</string>
    <string name="anya">Анна Щербакова</string>
    <string name="gp">Этапы Гран-При:</string>
    <string name="bookSingleTheory">Одиночное фигурное катание — это дисциплина, в которой мужчины и женщины соревнуются по сумме баллов за две обязательные программы: короткую ипроизвольную. Судьи оценивают спирали, вращения, прыжки и хореографические элементы.</string>
</resources>