<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingTop="29dp"
    xmlns:android="http://schemas.android.com/apk/res/android">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bookSingle"
            android:textSize="25sp"
            android:gravity="center_horizontal"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bookSingleTheory"
            android:textSize="19sp"
            android:paddingTop="20dp"/>
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:layout_weight="1">
                    <ImageButton
                        android:layout_height="match_parent"
                        android:layout_width="match_parent"
                        android:scaleType="fitXY"
                        android:layout_weight="1"
                        android:src="@drawable/book_jumps"
                        android:background="@color/background"
                        android:paddingEnd="6dp"
                        android:contentDescription="@string/jumps"/>
                    <ImageButton
                        android:layout_height="match_parent"
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:scaleType="fitXY"
                        android:src="@drawable/book_spins"
                        android:background="@color/background"
                        android:paddingStart="6dp"
                        android:contentDescription="@string/spins"/>
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp"
                    android:layout_weight="1">
                    <ImageButton
                        android:layout_height="match_parent"
                        android:layout_width="match_parent"
                        android:scaleType="fitXY"
                        android:layout_weight="1"
                        android:src="@drawable/book1"
                        android:background="@color/background"
                        android:paddingEnd="6dp"
                        tools:ignore="RtlSymmetry"
                        android:contentDescription="@string/choreo"/>
                    <ImageButton
                        android:layout_height="match_parent"
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:scaleType="fitXY"
                        android:src="@drawable/book2"
                        android:background="@color/background"
                        android:paddingStart="6dp"
                        tools:ignore="RtlSymmetry"
                        android:contentDescription="@string/types"/>
                </TableRow>
            </TableLayout>
</LinearLayout>