<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_marginBottom="29dp"
            android:text="@string/choose"
            android:textColor="@color/text_color"
            android:textSize="24sp"/>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginBottom="25dp"
                android:gravity="center_horizontal">
                <ImageButton
                    android:id="@+id/btn_single"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/background"
                    android:contentDescription="@string/single"
                    android:scaleType="fitXY"
                    android:src="@drawable/btn_trusova"/>
                <ImageButton
                    android:id="@+id/btn_score"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/background"
                    android:layout_marginStart="15dp"
                    android:contentDescription="@string/score"
                    android:scaleType="fitXY"
                    android:src="@drawable/btn_skate"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="25dp">
                <ImageButton
                    android:id="@+id/btn_dance"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/background"
                    android:contentDescription="@string/dance"

                    android:scaleType="fitXY"
                    android:src="@drawable/btn_ice_dance" />
                <ImageButton
                    android:id="@+id/btn_pairs"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/background"
                    android:layout_marginStart="15dp"
                    android:contentDescription="@string/pairs"
                    android:scaleType="fitXY"
                    android:src="@drawable/btn_pairs" />
            </TableRow>
        </TableLayout>
</LinearLayout>
